styling touch ups

--- a/email/announcement.html
+++ b/email/announcement.html
@@ -24,7 +24,28 @@
           <button class="get-template-button" href="#" type="button" name="get-the-template">Get the template</button>
         </div>
         <hr></hr>
-        <div class="detail-conatiner">
+        <div class="detail-container">
+
+          <div class="detail">
+            <div class='detail-icon-container'>
+              <img class='detail-icon' src="./images/list-item.png" alt="list-item" />
+            </div>
+            <div class="detail-text-container">
+              <h3 class="detail-title">Highly compatible</h3>
+              <p class="detail-text">Tested on the most popular email  clients for web, desktop and mobile. Checklist included.</p>
+            </div>
+          </div>
+
+          <div class="detail">
+            <div class='detail-icon-container'>
+              <img class='detail-icon' src="./images/list-item.png" alt="list-item" />
+            </div>
+            <div class="detail-text-container">
+              <h3 class="detail-title">Designer friendly</h3>
+              <p class="detail-text">Sketch app resource file and a bunch of social media icons are also included in GitHub repository.</p>
+            </div>
+
+          </div>
         </div>
 
       </div>
