mobile touch ups

--- a/email/announcement.html
+++ b/email/announcement.html
@@ -44,8 +44,12 @@
               <h3 class="detail-title">Designer friendly</h3>
               <p class="detail-text">Sketch app resource file and a bunch of social media icons are also included in GitHub repository.</p>
             </div>
-
           </div>
+        </div>
+        <hr></hr>
+        <div class="contact-container">
+          <p class="contact-text">Have a question?</p>
+          <a class="contact-email" href="mailto:support@ourteam.com">support@ourteam.com</a>
         </div>
 
       </div>
