--- a/email/announcement.html
+++ b/email/announcement.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
+ "http://www.w3.org/TR/html4/strict.dtd">
 <html>
   <head>
     <meta charset="utf-8">
@@ -46,7 +47,9 @@
             </div>
           </div>
         </div>
+
         <hr></hr>
+
         <div class="contact-container">
           <p class="contact-text">Have a question?</p>
           <a class="contact-email" href="mailto:support@ourteam.com">support@ourteam.com</a>
