--- a/email/announcement.html
+++ b/email/announcement.html
@@ -10,7 +10,7 @@
   <body>
     <center class="wrapper">
 
-      <img width=75 height=25 src="./images/logo-black.png" alt="logo-black" />
+      <img class="top-logo" width=75 height=25 src="./images/logo-black.png" alt="logo-black" />
 
       <div class="content-container">
         <div class="title-container">
@@ -20,7 +20,7 @@
         <img class="main-image" src="./images/hero-wide.png" alt="hero-wide" />
         <div class="pitch-container">
           <p class="pitch-text">
-            More than 50% of total email opens occurred on a mobile <br> device — a mobile friendly design is a must for email campaigns.
+            More than 50% of total email opens occurred on a mobile device — a mobile friendly design is a must for email campaigns.
           </p>
           <button class="get-template-button" href="#" type="button" name="get-the-template">Get the template</button>
         </div>
@@ -57,7 +57,7 @@
 
       </div>
 
-      <div class="social-icons-conatiner">
+      <div class="social-icons-container">
         <img class="social-icon" src="./images/social-icons/facebook.png" href="#" alt="facebook-icon" />
         <img class="social-icon" src="./images/social-icons/twitter.png" href="#" alt="twitter-icon" />
         <img class="social-icon" src="./images/social-icons/googleplus.png" href="#" alt="googleplus-icon" />
