--- a/email/zipped.html
+++ b/email/zipped.html
@@ -24,14 +24,14 @@
   <body style="display: flex;justify-content: center;align-items: center;flex-direction: column;">
     <center class="wrapper" style="width: 100%;min-width: 250px;height: auto;background-color: #F0F0F0;box-shadow: 1px 1px 5px 2px #b8bdbd;display: flex;justify-content: space-around;align-items: center;flex-direction: column;">
 
-      <img class="top-logo" style="padding-top: 10px;padding-bottom: 10px;" width=75 height=25 src="./images/logo-black.png" alt="logo-black" />
+      <img class="top-logo" style="padding-top: 10px;padding-bottom: 10px;" width=75 height=25 src="https://s3-us-west-1.amazonaws.com/eaze-email/logo-black.png" alt="logo-black" />
 
       <div class="content-container" style="width: 80%;min-width: 250px;height: auto;background-color: white;border-radius: 3px;display: flex;justify-content: space-around;flex-direction: column;align-items: center;">
         <div class="title-container" style="display: flex;justify-content: center;align-items: center;flex-direction: column;height: auto;width: 100%;padding-bottom: 10px;">
           <h1 class="title" style="font-family: Helvetica, sans-serif;font-size: 18px;font-weight: bolder;margin-bottom: 15px;padding-right: 40px;padding-left: 40px;">Get this responsive email template</h1>
           <h2 class="subtitle" style="font-family: Helvetica, sans-serif;font-size: 13px;font-weight: normal;margin-top: 0px;padding-left: 20px;padding-right: 20px;">Available on GitHub and CodePen</h2>
         </div>
-        <img class="main-image" style="height: auto;width: 100%;min-width: 205px;padding-bottom: 10px;" src="./images/hero-wide.png" alt="hero-wide" />
+        <img class="main-image" style="height: auto;width: 100%;min-width: 205px;padding-bottom: 10px;" src="https://s3-us-west-1.amazonaws.com/eaze-email/hero-wide.png" alt="hero-wide" />
         <div class="pitch-container" style="height: auto;width: 90%;display: flex;justify-content: center;align-items: center;flex-direction: column;padding-bottom: 10px;">
           <p class="pitch-text" style="font-family: Helvetica, sans-serif;font-size: 13px;text-align: center;margin-top: 0px;line-height: 20px;">
             More than 50% of total email opens occurred on a mobile device — a mobile friendly design is a must for email campaigns.
@@ -43,7 +43,7 @@
 
           <div class="detail" style="display: flex;justify-content: space-around;align-items: center;flex-direction: row;height: auto;width: 90%;margin-bottom: 10px;margin-top: 10px;">
             <div class='detail-icon-container' style="display: flex;justify-content: flex-start;flex-direction: column;height: 100%;align-self: stretch;">
-              <img class='detail-icon' style="width: 40px;height: 40px;" src="./images/list-item.png" alt="list-item" />
+              <img class='detail-icon' style="width: 40px;height: 40px;" src="https://s3-us-west-1.amazonaws.com/eaze-email/list-item.png" alt="list-item" />
             </div>
             <div class="detail-text-container" style="display: flex;justify-content: flex-start;flex-direction: column;height: auto;width: 100%;">
               <h3 class="detail-title" style="font-size: 13px;margin: 0;text-align: left;font-family: Arial, Helvetica, sans-serif;padding-left: 15px;">Highly compatible</h3>
@@ -53,7 +53,7 @@
 
           <div class="detail" style="display: flex;justify-content: space-around;align-items: center;flex-direction: row;height: auto;width: 90%;margin-bottom: 10px;margin-top: 10px;">
             <div class='detail-icon-container' style="display: flex;justify-content: flex-start;flex-direction: column;height: 100%;align-self: stretch;">
-              <img class='detail-icon' style="width: 40px;height: 40px;" src="./images/list-item.png" alt="list-item" />
+              <img class='detail-icon' style="width: 40px;height: 40px;" src="https://s3-us-west-1.amazonaws.com/eaze-email/list-item.png" alt="list-item" />
             </div>
             <div class="detail-text-container" style="display: flex;justify-content: flex-start;flex-direction: column;height: auto;width: 100%;">
               <h3 class="detail-title" style="font-size: 13px;margin: 0;text-align: left;font-family: Arial, Helvetica, sans-serif;padding-left: 15px;">Designer friendly</h3>
@@ -72,10 +72,10 @@
       </div>
 
       <div class="social-icons-container" style="display: flex;justify-content: center;align-items: center;flex-direction: row;padding-top: 10px;">
-        <img class="social-icon" style="width: 35px;height: 35px;margin-left: 10px;margin-right: 10px;" src="./images/social-icons/facebook.png" href="#" alt="facebook-icon" />
-        <img class="social-icon" style="width: 35px;height: 35px;margin-left: 10px;margin-right: 10px;" src="./images/social-icons/twitter.png" href="#" alt="twitter-icon" />
-        <img class="social-icon" style="width: 35px;height: 35px;margin-left: 10px;margin-right: 10px;" src="./images/social-icons/googleplus.png" href="#" alt="googleplus-icon" />
-        <img class="social-icon" style="width: 35px;height: 35px;margin-left: 10px;margin-right: 10px;" src="./images/social-icons/instagram.png" href="#" alt="instagram-icon" />
+        <img class="social-icon" style="width: 35px;height: 35px;margin-left: 10px;margin-right: 10px;" src="https://s3-us-west-1.amazonaws.com/eaze-email/facebook.png" href="#" alt="facebook-icon" />
+        <img class="social-icon" style="width: 35px;height: 35px;margin-left: 10px;margin-right: 10px;" src="https://s3-us-west-1.amazonaws.com/eaze-email/twitter.png" href="#" alt="twitter-icon" />
+        <img class="social-icon" style="width: 35px;height: 35px;margin-left: 10px;margin-right: 10px;" src="https://s3-us-west-1.amazonaws.com/eaze-email/googleplus.png" href="#" alt="googleplus-icon" />
+        <img class="social-icon" style="width: 35px;height: 35px;margin-left: 10px;margin-right: 10px;" src="https://s3-us-west-1.amazonaws.com/eaze-email/instagram.png" href="#" alt="instagram-icon" />
       </div>
 
       <div class="footer-text-container" style="display: flex;flex-direction: column;justify-content: center;align-items: center;width: 90%;height: auto;">
