--- a/email/announcement.html
+++ b/email/announcement.html
@@ -6,6 +6,11 @@
     <title>Responsive Email Template</title>
     <meta name="description" content="Get this responsive email template - a mobile friendly design is a must for email campaigns.">
     <style>
+    @media yahoo {
+      .wrapper {
+        text-align: -webkit-center !important;
+      }
+    }
     .social-icon:hover {
       cursor: pointer;
       opacity: 0.9;
@@ -22,7 +27,7 @@
     </style>
   </head>
   <body style="display: block;text-align: center;">
-    <center class="wrapper" style="width: 100%;min-width: 250px;height: auto;background-color: #F0F0F0;box-shadow: 1px 1px 5px 2px #b8bdbd;display: block;">
+    <center class="wrapper" style="width: 100%;min-width: 250px;height: auto;background-color: #F0F0F0;box-shadow: 1px 1px 5px 2px #b8bdbd;display: block;text-align: -webkit-center;">
 
       <img class="top-logo" style="padding-top: 10px;" width=75 height=25 src="https://s3-us-west-1.amazonaws.com/eaze-email/logo-black.png" alt="logo-black" />
 
